@@ -499,6 +499,9 @@ Release 2.7.3 - UNRELEASED
 
     YARN-4017. container-executor overuses PATH_MAX. (Sidharta Seethana via vvasudev)
 
+    YARN-4253. Standardize on using PrivilegedOperationExecutor for all
+    invocations of container-executor in LinuxContainerExecutor. (Sidharta Seethana via vvasudev)
+
 Release 2.7.2 - 2016-01-25
 
   INCOMPATIBLE CHANGES
